Fix layout bugs for documentation

--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -1,3 +1,7 @@
-.md-typeset p {
+.md-typeset__table p {
   margin: 0;
+}
+
+.hidden-toc {
+  display: none;
 }
